--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ header {
 }
 #cloudOne {
   display: flex;
-  justify-content: ;
+  //justify-content: ;
   border: 5px solid black;
 }
 
@@ -25,7 +25,7 @@ header {
  hr {
   border-top: 6px dotted rgb(220, 220, 220);
   width: 5%;
-  border: ;
+  //border: ;
 
 }
 a:hover {
